finished responsive web design and finalized color scheme, added in media queeries and touched up some spacing issues on hyperlinks

--- a/portfolio.css
+++ b/portfolio.css
@@ -1,6 +1,6 @@
 *{
 	box-sizing: border-box;
-	color:#000;
+	color:#fff;
 }
 
 body{
@@ -11,71 +11,75 @@ body{
 	background-attachment:fixed;
 	background-size:cover;
 }
-h1{
-	background-color:#8D8741;
+h1, h2{
+	background-color:#115464;
 	border-radius:16px;
 	border-style: solid;
 	border-width:2px;
-	border-color:#BC986A;
+	border-color:#0c96b0;
 	margin:auto;
 	margin-top:10px;
 	margin-bottom:10px;
 	padding:5px;
-	color:white;
+	font-size: 30px;
 }
 
 .projects h1{
 	margin-bottom:5px;
 }
-h2{
-	background-color:#659DBD;;
+h3{
+	display:inline;
+	background-color:#2494bc;;
 	border-radius:16px;
 	border-style: solid;
-	border-width:2px;
-	border-color:#8D8741;
-	margin:auto;
-	margin-top:10px;
-	margin-bottom:10px;
+	border-width: 2px;
+	border-color:#f7ebae;
+	margin: 10px auto;
 	padding:5px;
-	color:white;
+	font-size: 30px;
 }
 
 
-main{
-    height: 100vh;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
 a{
 	font-size:25px;
 	padding:5px;
 	border-radius:16px;
 	border-style: solid;
 	border-width:2px;
-	border-color:#DAAD86;
+	border-color:#f1db91;
 	margin:0 auto;
-	color:#FBEEC1;
+	color:#fff;
 	text-decoration:none;
-	background-color:#659DBD;
+	background-color:#228db1;
+	outline:none;
 }
 
-a:hover, a:active{
+a:hover {
+	background-color:#DAAD86
+}
+
+a:focus{
 	background-color:#DAAD86
 }
 
 nav a{
-	font-size:5vh;
+	font-size:4vw;
+	margin:10px auto;
 }
 
 .contact_buttons a{
-	font-size:40px;
+	font-size:4vw;
+	margin: 0 auto
 }
 
-.fa-facebook{
-	padding:5px 10px;
+.top_link{
+	margin:0 ;
 }
+
+footer{
+	width:100%;
+}
+
 
 section{
 	width:80%;
@@ -85,57 +89,51 @@ section{
 }
 
 .paragraph{
+	flex-direction: column;
+	justify-content: start;
 	height:auto;
-	background-color:#BC986A;
+	background-color:#12505f;
 	border-radius:16px;
 	border-style: solid;
 	border-width:2px;
-	border-color:#DAAD86;
+	border-color:#f7ebae;
 	margin:50px auto;
 	padding:20px;
 }
-
 .paragraph p{
-	color:#FFF;
+	width:60%;
+}
+
+.paragraph p, .center_bar p{
+	font-size:calc(20px + 0.5vw);
 }
 
 .projects{
 	display:flex;
-	height:100%;
-	margin-right:250px;
-	margin-left:20px;
+	height:100%;;
+	margin:0 auto;
 	flex-direction:column;
+	
 }
 nav{
 	display:flex;
 	flex-direction:column;
 	justify-content:space-around;
-	height:80%;
-	margin:0px 40px;
+	height:100%;
 }
 
 .link_bar{
 	width:80%;
 	margin:0 auto;
 	display:flex;
-	flex direction:row;
+	flex-direction:row;
 	justify-content:space-between;
-	align-items:center;
 	margin-top:30px;
-	margin-bottom:30px;
 }
 
-.bg_box{
-	background-color:#FBEEC1;
-}
 
 footer{
-	background-color:#FBEEC1;
-	width: 100vw;
-	border-style: solid;
-	border-width:2px;
-	border-color:#DAAD86;
-	padding:20px 20px;
+	padding:5px 0px;
 }
 
 
@@ -146,10 +144,11 @@ footer{
 
 .contact_buttons{
 	height:100%;
-	width:200px;
+	width:30%;
 	display:flex;
 	justify-content:space-around;
 	align-items:center;
+	margin: auto;
 	
 }
 
@@ -161,75 +160,81 @@ footer{
 	width:80%;
 	flex-direction:column;
 	align-items:center;
-	background-color:#FBEEC1;
+	background-color:#f8eeba;
 	border-radius:16px;
 	border-style: solid;
 	border-width:2px;
-	border-color:#DAAD86;
+	border-color:#104e5d;
 	padding:20px 20px;
 	
 }
 
-.img_home{
-	width: auto;
-	height: auto;
-	margin:20px;
+.center_bar p{
+	color:#000;
+}
+
+img{
 	border-radius:32px;
 	border-style: solid;
 	border-width:2px;
-	border-color:#DAAD86;
+	border-color:#228db1;
+}
+.img_home{
+	width: 40vw;
+	height: fit-content;
 	margin:0 auto;
+	margin-top:10px;
 }
 
 .img{
+	min-width:150px;
 	width:40%;
 	height: fit-content;
-	padding:20px;
+	margin:10px 20px;
 }
 
-.img_wrap{
-	margin:0 auto;
-
-}
-
-.float_img{
-	float:left;
-	width:30%;
-}
-
-.float_title{
-	margin:0 auto;
-}
 .text_box{
-	width:50%;
+	width:100%;
 	display:flex;
-	flex-direction:column;
-}
+	flex-direction:row;
+	justify-content:space-between;
+}	
 
 .header_placement{
 	display:flex;
 	flex-direction:row-reverse;
 }
 
-.top_link{
-	margin:0px 100px;
-}
 
-.flex_border{
-	position:relative;
-	display: flex;
-	height:60%;
-}
-}
-.flex_border section{
-	width:auto;
-	flex-grow:8;
-}
-
-@media screen and (min-height:700px) and (max-width:600px){
+@media screen and (min-width:900px){
 	.img_home{
-		height:410px;
+		width:auto;
+		height:500px;
+	}
+	.fa-facebook{
+		padding: 5px 10px;
 	}
 }
 
+@media screen and (max-width:400px){
+	.contact_buttons{
+		flex-direction:column;
+	}
+}
+
+@media screen and (max-width:950px){
+	.text_box.left{
+		flex-direction:column-reverse;
+		justify-content: start;
+		align-items:center;
+	}
+	.text_box.right{
+		flex-direction:column;
+		justify-content: start;
+		align-items:center;
+	}
+	.paragraph p{
+		width:100%;
+	}
+}
 
